--- a/embedded/platformio.ini
+++ b/embedded/platformio.ini
@@ -8,12 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s2-saola-1]
+[env:esp32-c6-devkitc-1]
 platform = espressif32
-board = esp32-s2-saola-1
+board = esp32-c6-devkitc-1
+framework = espidf
 build_flags = 
 	-std=c++11
 	-I include
-framework = arduino
-lib_deps = olikraus/U8g2@^2.36.2
-
