--- a/embedded/platformio.ini
+++ b/embedded/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c6-devkitc-1]
+[env:esp32-c3-devkitm-1]
 platform = espressif32
-board = esp32-c6-devkitc-1
+board = esp32-c3-devkitm-1
 framework = espidf
 build_flags = 
-	-std=c++11
 	-I include
+monitor_speed = 9600
+upload_speed = 512000
